; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/alc/extr_if_alc.c_alc_miidbg_writereg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/alc/extr_if_alc.c_alc_miidbg_writereg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alc_softc = type { i32, i32 }

@ALC_MII_DBG_ADDR = common dso_local global i32 0, align 4
@ALC_MII_DBG_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.alc_softc*, i32, i32)* @alc_miidbg_writereg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alc_miidbg_writereg(%struct.alc_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.alc_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.alc_softc* %0, %struct.alc_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %8 = getelementptr inbounds %struct.alc_softc, %struct.alc_softc* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %11 = getelementptr inbounds %struct.alc_softc, %struct.alc_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @ALC_MII_DBG_ADDR, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @alc_miibus_writereg(i32 %9, i32 %12, i32 %13, i32 %14)
  %16 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %17 = getelementptr inbounds %struct.alc_softc, %struct.alc_softc* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %20 = getelementptr inbounds %struct.alc_softc, %struct.alc_softc* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @ALC_MII_DBG_DATA, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @alc_miibus_writereg(i32 %18, i32 %21, i32 %22, i32 %23)
  ret i32 %24
}

declare dso_local i32 @alc_miibus_writereg(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
